<resources>
    <string name="app_name">MoviesApp</string>

    <string name="action_settings">Settings</string>
    <string name="menu_popularity">Sort popularity</string>
    <string name="menu_rate">Sort rate</string>

    <string name="trailers">Trailers</string>
    <string name="button_favorite">Mark as favorite</string>
    <string name="button_favorite_remove">Remove as favorite</string>
    <string name="posterDescription">poster</string>
    <string name="title_activity_detail">Details</string>
    <string name="menu_favorite">Favorites</string>
    <string name="action_refresh">Refresh</string>
    <string name="progress_loading">Loading</string>
    <string name="fetchMovies">Retrieving movies</string>
    <string name="fetchReviews">Retrieving movie reviews</string>
    <string name="fetchTrailers">Retrieving movie trailers</string>
    <string name="reviews">Reviews</string>
    <string name="action_share">Share</string>
    <string name="title_popular">Most popular</string>
    <string name="title_rate">Highest Rated</string>
    <string name="title_favorites">Favorites</string>
    <string name="choose_movie">Choose a movie for details</string>
    <string name="no_internet_connection">No Internet connection detected</string>

</resources>
