<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="nano.jonask.moviesapp.MainActivity">

      <item android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            android:icon="@drawable/ic_action_refresh"
            app:showAsAction="always"/>
      <item android:id="@+id/action_sort" android:title="@string/menu_popularity" android:orderInCategory="100" app:showAsAction="never"/>
      <item android:id="@+id/action_rate" android:title= "@string/menu_rate" android:orderInCategory="101" app:showAsAction="never"/>
      <item android:id="@+id/action_favorite" android:title= "@string/menu_favorite" android:orderInCategory="102" app:showAsAction="never"/>
</menu>
